[package]
name = "wallet_kit_common"
version = "0.1.0"
edition = "2021"

[features]
placeholder = []

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
serde_repr = "0.1.17"
strum = { version = "0.25.0", features = ["derive"] }
radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "038ddee8b0f57aa90e36375c69946c4eb634efeb", features = [
    "serde",
] }
radix-engine-toolkit-json = { git = "https://github.com/radixdlt/radix-engine-toolkit", rev = "927b0c88dcc62325edf7c6279ee3f84f26a6eadc" }
enum-iterator = "1.4.1"
hex = "0.4.3"
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "038ddee8b0f57aa90e36375c69946c4eb634efeb", features = [
    "serde",
] }
bip32 = "0.5.1" # only need Secp256k1, to do validation of PublicKey
ed25519-dalek = "1.0.1"
rand = "0.8.5"
enum-as-inner = "0.6.0"
pretty_assertions = "1.4.0"
identified_vec = { version = "0.1.8", features = ["serde", "id_prim"] }
