[package]
name = "wallet_kit_common"
version = "0.1.0"
edition = "2021"

[features]
placeholder = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
iso8601-timestamp = { workspace = true }
uuid = { workspace = true }
serde_repr = { workspace = true }
strum = { workspace = true }
radix-engine-common = { workspace = true }
radix-engine-toolkit-json = { workspace = true }
enum-iterator = { workspace = true }
hex = { workspace = true }
transaction = { workspace = true }
bip32 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
enum-as-inner = { workspace = true }
identified_vec = { workspace = true }
pretty_assertions = "1.4.0"
