[package]
name = "core"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
thiserror = { workspace = true }
derive_more = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
log = { workspace = true }
pretty_assertions = { workspace = true }
aes-gcm = { workspace = true }
url = { workspace = true }
hkdf = { workspace = true }
reqwest = { workspace = true }
actix-rt = { workspace = true }
async-trait = { workspace = true }
assert-json-diff = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
enum-as-inner = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_repr = { workspace = true }
iso8601-timestamp = { workspace = true }


sbor = { workspace = true }
radix-rust = { workspace = true }
radix-engine = { workspace = true }
radix-common = { workspace = true }
radix-common-derive = { workspace = true }
radix-engine-interface = { workspace = true }

radix-transactions = { workspace = true }

radix-engine-toolkit-json = { workspace = true }
radix-engine-toolkit = { workspace = true }


[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
