[package]
name = "drivers"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
serde = { workspace = true }
strum = { workspace = true }
async-trait = { workspace = true }
profile = { path = "../profile" }
common = { path = "../common" }
ret = { path = "../ret" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
