[package]
name = "drivers"
version = "1.1.0"
edition = "2021"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
serde = { workspace = true }
strum = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
pretty_env_logger = { workspace = true }
pretty_assertions = { workspace = true }
async-trait = { workspace = true }
enum-iterator = { workspace = true }
actix-rt = { workspace = true }
profile = { path = "../profile" }
common = { path = "../common" }
ret = { path = "../ret" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
