[package]
name = "ecdsa"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Internal Crates
hd = { path = "../hierarchical_deterministic" }
common = { path = "../common" }

# External Crates
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
