[package]
name = "gateway-client-and-api"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-core-assert-json = { path = "../sargon-core-assert-json" }
sargon-core = { path = "../sargon-core" }
sargon-addresses = { path = "../sargon-addresses" }
sargon-drivers = { path = "../sargon-drivers" }
http-client = { path = "../http-client" }
gateway-models = { path = "../gateway-models" }
sargon-transaction-models = { path = "../sargon-transaction-models" }
sargon-profile-gateway = { path = "../sargon-profile-gateway" }

# === RADIX DEPENDENCIES ===
radix-common = { workspace = true }

# === EXTERNAL DEPENDENCIES ===
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
