[package]
name = "gateway_api"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
serde = { workspace = true }
drivers = { path = "../drivers" }
common = { path = "../common" }
ret = { path = "../ret" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
