[package]
name = "http-client"
version = "1.2.1"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-core = { path = "../sargon-core" }
sargon-drivers = { path = "../sargon-drivers" }

# === RADIX DEPENDENCIES ===

# === EXTERNAL DEPENDENCIES ===
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
