[package]
name = "http-client"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-drivers = { path = "../sargon-drivers" }
sargon-bytes = { path = "../sargon-bytes" }
sargon-core-error = { path = "../sargon-core-error" }
sargon-core-utils = { path = "../sargon-core-utils" }

# === RADIX DEPENDENCIES ===

# === EXTERNAL DEPENDENCIES ===
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
