[package]
name = "identified-vec-of"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-core-assert-json = { path = "../sargon-core-assert-json" }
sargon-core-error = { path = "../sargon-core-error" }

# === RADIX DEPENDENCIES
# None

# === EXTERNAL DEPENDENCIES
derive_more = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
