[package]
name = "next-derivation-index-ephemeral"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-core-assert-json = { path = "../sargon-core-assert-json" }
sargon-core-error = { path = "../sargon-core-error" }
sargon-core = { path = "../sargon-core" }
sargon-hierarchical-deterministic = { path = "../sargon-hierarchical-deterministic" }
sargon-factors = { path = "../sargon-factors" }
sargon-addresses = { path = "../sargon-addresses" }

# === RADIX DEPENDENCIES
#None

# === EXTERNAL DEPENDENCIES
enum-iterator = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
