[package]
name = "profile"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
common = { path = "../common" }
ret = { path = "../ret" }
hd = { path = "../hierarchical_deterministic" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
