[package]
name = "profile"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
radix-engine-interface = { workspace = true }
radix-rust = { workspace = true }
enum-iterator = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
hkdf = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
paste = { workspace = true }
k256 = { workspace = true }
radix-common = { workspace = true }               # Hash
pretty_assertions = { workspace = true }
actix-rt = { workspace = true }
derive_more = { workspace = true }
enum-as-inner = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
aes-gcm = { workspace = true }
common = { path = "../common" }
ret = { path = "../ret" }
hd = { path = "../hierarchical_deterministic" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
