[package]
name = "radix-name-service"
version = "1.2.26"
edition = "2021"

[dependencies]
prelude = { workspace = true }
k256 = { workspace = true }
addresses = { workspace = true }
bytes = { workspace = true }
core-utils = { workspace = true }
network = { workspace = true }
metadata = { workspace = true }
drivers = { workspace = true }
gateway-client-and-api = { workspace = true }
gateway-models = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
serde_json = { workspace = true }
