[package]
name = "radix_connect"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
paste = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
derive_more = { workspace = true }
common = { path = "../common" }
profile = { path = "../profile" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
