[package]
name = "ret"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
uniffi = { workspace = true, features = ["cli"] }
common = { path = "../common" }
pretty_assertions = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
rand = { workspace = true }

sbor = { workspace = true }
radix-rust = { workspace = true }
radix-engine = { workspace = true }
radix-common = { workspace = true }
radix-common-derive = { workspace = true }
radix-engine-interface = { workspace = true }
radix-transactions = { workspace = true }
radix-engine-toolkit-json = { workspace = true }
radix-engine-toolkit = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

# cargo_toml = "0.15.3"
cargo_toml = { git = "https://gitlab.com/lib.rs/cargo_toml", rev = "e498c94fc42a660c1ca1a28999ce1d757cfe77fe" }


[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
