[package]
name = "sargon-clients"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-core-collections = { path = "../sargon-core-collections" }
sargon-profile = { path = "../sargon-profile" }
sargon-profile-supporting-types = { path = "../sargon-profile-supporting-types" }
sargon-factors-supporting-types = { path = "../sargon-factors-supporting-types" }
sargon-drivers = { path = "../sargon-drivers" }
http-client = { path = "../http-client" }
gateway-client-and-api = { path = "../gateway-client-and-api" }
sargon-hierarchical-deterministic = { path = "../sargon-hierarchical-deterministic" }

# === RADIX DEPENDENCIES ===
# None

# === EXTERNAL DEPENDENCIES ===
async-trait = { workspace = true }
derive_more = { workspace = true }
enum-as-inner = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
