[package]
name = "sargon-core-collections"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-has-sample-values = { path = "../sargon-has-sample-values" }

# === RADIX DEPENDENCIES ===
# None

# === EXTERNAL DEPENDENCIES ===
indexmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
