[package]
name = "sargon-core-entity"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-core-assert-json = { path = "../sargon-core-assert-json" }
sargon-core-error = { path = "../sargon-core-error" }
sargon-has-sample-values = { path = "../sargon-has-sample-values" }

# === RADIX DEPENDENCIES ===
# None

# === EXTERNAL DEPENDENCIES ===
itertools = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
