[package]
name = "sargon-core-metadata"
version = "1.1.99"
edition = "2021"

[dependencies]
# === SARGON CRATES ===
sargon-has-sample-values = { path = "../sargon-has-sample-values" }

# === RADIX DEPENDENCIES ===
radix-engine-interface = { workspace = true }

# === EXTERNAL DEPENDENCIES ===
derive_more = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
